# pifms-app

./: CMakeLists.txt  README.MD
.github/workflows/: ci-build.yml
installer/: Bundle.wxs  Package.wxs
resources/avdb/: default.pifmsdb  dmitrysigning.crt  signing.crt
src/: main.cpp
src/common/: constants.h  device_info.cpp  device_info.h  text_utils.cpp  text_utils.h
src/gui/: rpc_client.cpp  rpc_client.h  service_guard.cpp  service_guard.h
src/rpc/: pifms_control.idl  pifms_control_api.h
src/service/: antivirus_engine.cpp  antivirus_engine.h  antivirus_service.cpp  antivirus_service.h  api_client.cpp  api_client.h  service_main.cpp  session_manager.cpp  session_manager.h
src/tests/: antivirus_engine_tests.cpp
src/tests/resources/: invalid-record-signature.pifmsdb
